--- a/gallery.html
+++ b/gallery.html
@@ -68,45 +68,97 @@
       </div>
     </nav>
 
-    <div class="gallery-background">
-      <h1>photo <span class="gallery-bold">gallery</span></h1>
-      <div class="gallery-container">
-        <div class="gallery">
-          <div class="gallery-img"><span><img src="gallery/img-0.jpg" alt="Old Bank Building 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-1.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-2.jpg" alt="Route 52 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-3.jpg" alt="Downtown 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-7.jpg" alt="Old Wolf Creek Bridge 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-6.jpg" alt="Veterans Memorial 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-8.jpg" alt="Wolf Creek 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-9.jpg" alt="BCHS 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-10.jpg" alt="BCHS 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-11.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-16.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-20.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-25.jpg" alt="North Scenic Highway 7/01/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-13.jpg" alt="North Scenic Highway 3/27/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-12.jpg" alt="Wolf Creek 3/27/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-14.jpg" alt="Wolf Creek 3/27/2024"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-32.jpg" alt="Aerial View 7/26/2023"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-26.jpg" alt="Aerial View 7/26/2023"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-27.jpg" alt="Aerial View 7/26/2023"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-30.jpg" alt="BCHS 7/26/2023"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-31.jpg" alt="BCHS 7/26/2023"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-29.jpg" alt="BCHS 7/26/2023"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-28.jpg" alt="North Scenic Highway 7/26/2023"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-15.jpg" alt="Route 52  10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-17.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-18.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-19.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-21.jpg" alt="North Scenic Highway 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-22.jpg" alt="BCHS 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-23.jpg" alt="Rocky Gap VA View 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-24.jpg" alt="Old Bank Building 10/31/2017"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-4.jpg" alt="RGMC 6/21/2013"></span></div>
-          <div class="gallery-img"><span><img src="gallery/img-5.jpg" alt="North Scenic Highway 6/21/2013"></span></div>
+     <div class="gallery-background">
+        <h1>photo <span class="gallery-bold">gallery</span></h1>
+        <img src="heading.png" class="heading-img">
+        <div class="gallery-container">
+            <h3>spring photos</h3>
+            <div class="gallery">
+                <div class="gallery-img"><span><img src="gallery/spring-1.jpg" alt="Woif Creek 3/27/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/spring-2.jpg" alt="Wolf Creek Bridge 3/27/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/spring-3.jpg" alt="North Scenic Highway 3/27/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/spring-4.jpg" alt="North Scenic Highway 3/27/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/spring-5.jpg" alt="Wolf Creek Bridge 3/27/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/spring-6.jpg" alt="Downtown 3/27/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/spring-7.jpg" alt="Laurel Creek 3/27/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/spring-8.jpg" alt="North Scenic Highway 3/27/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/spring-9.jpg" alt="Wolf Creek 3/27/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/spring-10.jpg" alt="Laurel Creek 3/27/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/spring-11.jpg" alt="Post Office 3/27/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/spring-12.jpg" alt="Route 61 3/27/24"></span></div>
+            </div>
+
+            <h3>summer photos</h3>
+            <div class="gallery">
+                <div class="gallery-img"><span><img src="gallery/summer-1.jpg" alt="Old Bank Building 7/1/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/summer-2.jpg" alt="Downtown 7/1/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/summer-3.jpg" alt="North Scenic Highway 7/1/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/summer-4.jpg" alt="Veterans Memorial 7/1/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/summer-5.jpg" alt="Wolf Creek Bridge 7/1/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/summer-6.jpg" alt="Downtown 7/1/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/summer-7.jpg" alt="Wolf Creek 7/1/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/summer-8.jpg" alt="North Scenic Highway 7/1/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/summer-9.jpg" alt="East River Mtn Rd 7/1/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/summer-10.jpg" alt="North Scenic Highway 7/1/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/summer-11.jpg" alt="North Scenic Highway 7/1/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/summer-12.jpg" alt="Laurel Fork Rd 7/1/24"></span></div>
+                
+
+            </div>
+ 
+            <h3>autumn photos</h3>
+            <div class="gallery">
+                <div class="gallery-img"><span><img src="gallery/fall-1.jpg" alt="Overlook View 10/31/17"></span></div>
+                <div class="gallery-img"><span><img src="gallery/fall-2.jpg" alt="Downtown 10/21/24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/fall-3.jpg" alt="Old Bank Building 10-21-24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/fall-4.jpg" alt="Downtown 10-21-24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/fall-5.jpg" alt="Wolf Creek Bridge 10-21-24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/fall-6.jpg" alt="Wolf Creek 10-21-24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/fall-7.jpg" alt="Laurel Fork Rd 10-31-17"></span></div>
+                <div class="gallery-img"><span><img src="gallery/fall-8.jpg" alt="East River Mtn Rd 10-31-17"></span></div>
+                <div class="gallery-img"><span><img src="gallery/fall-9.jpg" alt="North Scenic Highway 10-31-17"></span></div>
+                <div class="gallery-img"><span><img src="gallery/fall-10.jpg" alt="BCHS 10-31-17"></span></div>
+                <div class="gallery-img"><span><img src="gallery/fall-11.jpg" alt="Downtown 10-21-24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/fall-12.jpg" alt="BCHS 10-21-24"></span></div>
+
+            </div>
+
+            <h3>Aerial Photos</h3>
+            <div class="gallery">
+                <div class="gallery-img"><span><img src="gallery/aerial-1.jpg" alt="BCHS 7-26-23"></span></div>
+                <div class="gallery-img"><span><img src="gallery/aerial-2.jpg" alt="Aerial View 10-21-24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/aerial-3.jpg" alt="BCHS 7-26-23"></span></div>
+                <div class="gallery-img"><span><img src="gallery/aerial-4.jpg" alt="South Aerial View 10-21-24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/aerial-5.jpg" alt="North Aerial View 7-26-23"></span></div>
+                <div class="gallery-img"><span><img src="gallery/aerial-6.jpg" alt="Southeast Aerial View 10-21-24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/aerial-7.jpg" alt="South Aerial View 7-26-23"></span></div>
+                <div class="gallery-img"><span><img src="gallery/aerial-8.jpg" alt="North Aerial View 10-21-24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/aerial-9.jpg" alt="North Aerial View 7-26-23"></span></div>
+                <div class="gallery-img"><span><img src="gallery/aerial-10.jpg" alt="Northwest Aerial View 10-21-24"></span></div>
+                <div class="gallery-img"><span><img src="gallery/aerial-11.jpg" alt="Route 61 Aerial View 10-21-24 "></span></div>
+                <div class="gallery-img"><span><img src="gallery/aerial-12.jpg" alt="West Aerial View 10-21-24"></span></div>
+            </div>
         </div>
-      </div>
+
+        <div class="main-box">
+            <div class="top-content">
+                <span class="title">Image <p class="current-img"></p> of <p class="total-img"></p></span>
+                <span class="icon fas fa-times"></span>
+            </div>
+            <div class="img-box">
+                <div class="slide prev"><i class="fas fa-angle-left"></i></div>
+                <div class="slide next"><i class="fas fa-angle-right"></i></div>
+                <img src="" alt="">
+            </div>
+            <div class="bottom-content">
+                <img src="logo.png" alt="logo">
+                <div id="caption"></div>
+                <img src="logo.png" alt="logo">
+            </div>
+        </div>
+        <div class="img-shadow"></div>
+    </div>
+
       <div class="yearbook-link">
         <h1>yearbook <span class="gallery-bold">photos</span></h1>
         <a href="yearbook.html" target="_blank">
@@ -115,23 +167,6 @@
         <img src="img/hs.jpg" alt="high school">
       </div>
     </div>
-    <div class="main-box">
-      <div class="top-content">
-        <span class="title">Image <p class="current-img"></p> of <p class="total-img"></p></span>
-        <span class="icon fas fa-times"></span>
-      </div>
-      <div class="img-box">
-        <div class="slide prev"><i class="fas fa-angle-left"></i></div>
-        <div class="slide next"><i class="fas fa-angle-right"></i></div>
-        <img src="" alt="">
-      </div>
-      <div class="bottom-content">
-        <img src="img/logo-10.png" alt="logo">
-        <div id="caption"></div>
-        <img src="img/logo-10.png" alt="logo">
-      </div>
-    </div>
-    <div class="img-shadow"></div>
 
     <div class="bottom-logo">
       <img src="img/bottom-logo.png" alt="Rocky Gap Va logo">
