--- a/gallery.html
+++ b/gallery.html
@@ -151,9 +151,9 @@
                 <img src="" alt="">
             </div>
             <div class="bottom-content">
-                <img src="logo.png" alt="logo">
+                <img src="img/logo-10.png" alt="logo">
                 <div id="caption"></div>
-                <img src="logo.png" alt="logo">
+                <img src="img/logo-10.png" alt="logo">
             </div>
         </div>
         <div class="img-shadow"></div>
