--- a/gallery.html
+++ b/gallery.html
@@ -70,7 +70,7 @@
 
      <div class="gallery-background">
         <h1>photo <span class="gallery-bold">gallery</span></h1>
-        <img src="heading.png" class="heading-img">
+        <img src="gallery/heading.png" class="heading-img">
         <div class="gallery-container">
             <h3>spring photos</h3>
             <div class="gallery">
