--- a/community.html
+++ b/community.html
@@ -244,12 +244,12 @@
           </div>
           <hr>
 
-          <h6>Woody's Grill</h6>
+          <h6>Rocky Gap Grill</h6>
           <p>12749 N Scenic Hwy, Rocky Gap, VA 24366</p>
           <p>(276) 970-9745</p>
           <div class="links">
-            <a href="https://www.restaurantji.com/va/rocky-gap/woodys-grill-/" target="_blank">
-              <i class="fas fa-link"></i>
+            <a href="https://www.facebook.com/people/Rocky-Gap-Grill/61575934963994/" target="_blank">
+              <i class="fab fa-facebook"></i>
             </a>
           </div>
         </div>
