--- a/community.html
+++ b/community.html
@@ -112,7 +112,7 @@
       </div>
 
       <div class="square-logo">
-        <img src="img/logo-3.jpg">
+        <img src="img/collage.jpg" alt="Town of Rocky Gap collage">
       </div>
 
       <div class="info-section2">
